# pairbot

./: .envrc  .gitignore  Problems.json  README.md  bot.py  db.py  pyproject.toml  utils.py
alembic/: env.py
alembic/versions/: c2ab7b1ce2f4_default_values.py  d588346e0112_nuked_migrations_v.py  fab85b27c1d3_nuked.py
pairbot/: __init__.py  app.py  bot.py  client.py  config.py  context.py  discord.py  globals.py  main.py  models.py  utils.py
tests/: test_client.py
