[project]
name = "pairbot"
version = "0.0.1"
readme = "README.md"
dependencies = [
  "discord",
  "python-dotenv"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
profile = "black"

[tool.hatch.envs.default.scripts]
dev = "python bot.py -d"
prod = "python bot.py"

[tool.hatch.envs.style]
detached = true
dependencies = [
  "black",
  "isort"
]

[tool.hatch.envs.style.scripts]
check = [
  "black --check --diff .",
  "isort --check-only --diff .",
]
format = [
  "isort .",
  "black .",
]
